-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
4.6.0
-
None
-
d9c226c72105ef221c766cb9f616d10329197880
On KRunner (KDE 4.3 binary packages) , tab does not work anymore
With Qt 4.5, tab used to focus the suggestions, and then one could use tab again or the arrows to change
With Qt 4.6, tab still seems to change the focus, but the arrows does not works as expected.