Fix QGraphicsScene::isActive if the view is shown while the window is active.

We need to make sure the active state is preserved if graphicsview are
dinamically shown/hide while window is active.  Or if scene is changed
with setScene.

This fixes KRunner focus regressions

Reviewed-by: Andreas
Task-number: QTBUG-5281